--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -10,11 +10,16 @@
 
 body {
   min-height: 100vh;
+  background-color: #f7f7f7;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+p {
+  margin-bottom: 0;
 }
 
 .app {
