--- a/client/public/styles/addJob.css
+++ b/client/public/styles/addJob.css
@@ -1,128 +1,78 @@
-[class^='add-job'] {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    width: 450px;
+[class^="add-job"] {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  width: 450px;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.container p {
-    font-size: 17px;
-    padding: 5px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .requirements-fields {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-#upload-area {
-    width: 500px;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    border-radius: 20px;
-    box-shadow: 1px 1px 10px #878787;
-    border-radius: 20px;
-}
-
-#upload-area-view {
-    width: 80%;
-    height: 80%;
-    margin: auto;
-    border-radius: 20px;
-    border: 2px dashed #bbb5ff;
-    background: #f7f8ff;
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#upload-area-view #upload-file {
-    height: 50px;
-}
-
-#upload-area-view-uploaded {
-    background-size: 'cover';
-    background-position: 'center';
-    overflow: 'hidden',
-}
-
-#upload-area-view span {
-    font-size: 13px;
-    color: #777;
-    margin-top: 10px;
-}
-
-.add-job-fields input, select {
-    height: 50px;
-    padding: 12px 10px;
-    font-size: 16px;
-    border: 1px solid #9e9e9e;
-    box-shadow: 1px 1px 3px #878787;
-    border-radius: 10px;
-    color: #1c1c1c;
-    outline-color: #6c6c6c;
+.add-job-fields input,
+select {
+  height: 50px;
+  padding: 12px 10px;
+  font-size: 16px;
+  border: 1px solid #9e9e9e;
+  box-shadow: 1px 1px 3px #878787;
+  border-radius: 10px;
+  color: #1c1c1c;
+  outline-color: #6c6c6c;
 }
 
 .add-jobs-submit button {
-    width: 200px;
-    align-items: center;
-    appearance: none;
-    background-color: white;
-    border-radius: 24px;
-    border-style: none;
-    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
-    box-sizing: border-box;
-    color: #3c4043;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    height: 48px;
-    justify-content: center;
-    letter-spacing: .25px;
-    line-height: normal;
-    padding: 2px 24px;
-    position: relative;
-    text-align: center;
+  width: 200px;
+  align-items: center;
+  appearance: none;
+  background-color: white;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px -1px,
+    rgba(0, 0, 0, 0.14) 0 6px 10px 0, rgba(0, 0, 0, 0.12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: 0.25px;
+  line-height: normal;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
 }
 
 .login-popup-message {
-    margin: 5px 0 -5px 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+  margin: 5px 0 -5px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
 }
 
 .login-popup-message img {
-    height: 12px;
+  height: 12px;
 }
 
 .login-popup-message p {
-    color: #ff3737;
-    font-weight: 500;
+  color: #ff3737;
+  font-weight: 500;
 }
 
-
 @media (max-width: 576px) {
-
-    [class^='add-job'] {
-        width: 80vw;
-    }
-
-    #upload-area {
-        width: 80vw;
-    }
+  [class^="add-job"] {
+    width: 80vw;
+  }
 }
